--- a/Assignment3/app/src/main/res/layout/activity_main.xml
+++ b/Assignment3/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
         android:layout_height="60dp"
         android:orientation="horizontal"
         android:background="@color/black"
-        android:weightSum="2"
+        android:weightSum="3"
         >
         <LinearLayout
             android:id="@+id/nav_score"
@@ -82,6 +82,20 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/list_nav"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/nav_dice"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/dice"/>
 
         </LinearLayout>
         <LinearLayout
