--- a/Assignment3/app/src/main/res/layout/activity_setting.xml
+++ b/Assignment3/app/src/main/res/layout/activity_setting.xml
@@ -53,7 +53,6 @@
         android:drawableLeft="@drawable/lose"
         android:drawablePadding="12dp"/>
 
-    <!-- Nút thứ ba -->
     <TextView
         android:id="@+id/btnTotal"
         android:layout_width="match_parent"
@@ -117,6 +116,45 @@
         android:drawableLeft="@drawable/none"
         android:drawablePadding="12dp"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Random page"
+        android:textColor="@color/white"
+
+        android:layout_marginLeft="20dp"></TextView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="20dp"
+        android:weightSum="2">
+
+
+        <TextView
+            android:id="@+id/btnDice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_list"
+            android:text="Dice"
+            android:textColor="@color/white"
+            android:padding="16dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/dice"
+            android:drawablePadding="12dp"/>
+        <TextView
+            android:id="@+id/btnFirst"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_list"
+            android:text="Who go first"
+            android:textColor="@color/white"
+            android:drawableLeft="@drawable/none"
+            android:padding="16dp"
+            android:layout_weight="1"
+            android:drawablePadding="12dp"/>
+    </LinearLayout>
+
     <Space
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -127,10 +165,8 @@
         android:layout_height="60dp"
         android:orientation="horizontal"
         android:background="@color/black"
-        android:weightSum="2"
+        android:weightSum="3"
         >
-
-        <!-- Tính điểm -->
         <LinearLayout
             android:id="@+id/nav_score"
             android:layout_width="0dp"
@@ -144,6 +180,21 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/list_nav"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/nav_dice"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/dice"/>
 
         </LinearLayout>
 
